# let-me-cook

./: CMakeLists.txt  actividad1.c  articulos.c  articulos.h  compilacion.sh  compras.c  compras.h  compras.txt  empleados pia.c  empleados.c  empleados.h  insumos.c  insumos.h  main  main.c  manejoArchivos.c  manejoArchivos.h  mercados pia.c  mercados.c  mercados.h  provedor.c  provedor.h  reportes.c  reportes.h  utils.c  utils.h  ventas.c  ventas.h  ventas.txt
